# chimera-cmake-template

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  BRIEF.md  CHIMERA.md  CMakeLists.txt  CMakePresets.json  COMPONENTS.md  DETAIL.md  README.md  SECURITY.md  conanfile.py  coverage.cmake  lint.cmake
doc/: CHIMERA.md
task/: AddCodeCoverage.md  AddPropTesting.md  ImproveDocs.md
task/ProjectRoot/: Implement_Valgrind_tests.md
template/app/app_target/: CMakeLists.txt  main.cpp
template/app/app_target/doc/: BRIEF.md  DETAIL.md
template/app/test_target/all_lib_target_specs/: CMakeLists.txt  all_lib_target_specs.cpp
template/app/test_target/all_lib_target_specs/cl/specs_unitname_cl/: CMakeLists.txt  specs_unitname_cl.cpp
template/app/test_target/all_lib_target_specs/fn/specs_unitname/: CMakeLists.txt  specs_unitname.cpp
template/app/test_target/all_lib_target_specs/fn/specs_unitname_fn/: CMakeLists.txt  specs_unitname_fn.cpp
template/lib/lib_target/: CMakeLists.txt
template/lib/lib_target/doc/: BRIEF.md  DETAIL.md
template/lib/lib_target/inc/lib_target/cl/: cl.h
template/lib/lib_target/inc/lib_target/def/: def.h
template/lib/lib_target/inc/lib_target/fn/: fn.h
template/lib/lib_target/src/cl/: cl.cpp
template/lib/subsystem_target/: CMakeLists.txt
template/lib/subsystem_target/doc/: BRIEF.md  DETAIL.md
template/module/app/: CMakeLists.txt
template/module/lib/: CMakeLists.txt
template/module/lib/inc/lib/detail/cl/: cl.h
template/module/lib/inc/lib/detail/def/: def.h
template/module/lib/inc/lib/detail/fn/: fn.h  reader_fn.h  writer_fn.h
template/module/lib/inc/lib/public/cl/: cl.h
template/module/lib/inc/lib/public/def/: def.h
template/module/lib/inc/lib/public/fn/: fn.h  reader_fn.h  writer_fn.h
template/module/lib/src/detail/def/: def.cpp
template/module/lib/src/detail/fn/: fn.cpp  reader_fn.cpp  writer_fn.cpp
template/module/lib/src/public/cl/: cl.cpp
template/module/lib/src/public/fn/: fn.cpp  reader_fn.cpp  writer_fn.cpp
template/module/subsystem/: CMakeLists.txt
template/module/test/: CMakeLists.txt  main.cpp  main_nonfunctional.cpp
template/module/test/all_lib_specs/: CMakeLists.txt  all_lib_specs.cpp  all_lib_specs_nonfunctional.cpp
template/module/test/all_lib_specs/fn/specs_unitname/: CMakeLists.txt  specs_unitname_fn.cpp  specs_unitname_nonfunctional_fn.cpp
template/module/test/all_lib_specs/fn/specs_unitname_fn/: specs_unitname_fn.cpp
template/module/test/fn/specs_unitname/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py  math_conan_package_test.cpp
util/task/: coverage.cmake  lint.cmake  package.cmake
